syntax = "proto3";

option csharp_namespace = "GrpcFileServer";

package infra.directory.v1;

service DirectoryTransfer {
  rpc CreateDirectory (CreateDirectoryRequest) returns (CreateDirectoryResponse);
  rpc IsExistDirectory (IsExistDirectoryRequest) returns (IsExistDirectoryResponse);
  rpc GetFiles (GetFilesRequest) returns (GetFilesResponse);
}

message CreateDirectoryRequest {
  string directory_name = 1;
  string mark = 2;
}

message CreateDirectoryResponse {
  string mark = 1;
}

message IsExistDirectoryRequest {
  string directory_name = 1;
  string mark = 2;
}

message IsExistDirectoryResponse {
  bool status = 1;
  string mark = 2;
}

message GetFilesRequest {
  string directory_name = 1;
  string search_pattern = 2;
  string search_option = 3;
  string mark = 4;
}

message GetFilesResponse {
  repeated string file_names = 1;
  string mark = 2;
}
