syntax = "proto3";

option csharp_namespace = "GrpcFileServer";

package infra.file.v1;

service FileTransfer {
  rpc UploadFile (stream UploadFileRequest) returns (stream UploadFileResponse);
  rpc DownloadFile (DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc IsExistFile (IsExistFileRequest) returns (IsExistFileResponse);
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
  rpc GetFileSize (GetFileSizeRequest) returns (GetFileSizeResponse);
  rpc MoveFile (MoveFileRequest) returns (MoveFileResponse);
  rpc CopyFile (CopyFileRequest) returns (CopyFileResponse);
}

message UploadFileRequest {
  string filename = 1;
  int32 block = 2;
  bytes content = 3;
  string mark = 4;
}

message UploadFileResponse {
  string filename = 1;
  string mark = 2;
}

message DownloadFileRequest {
  string filename = 1;
  string mark = 2;
}

message DownloadFileResponse {
  string filename = 1;
  int32 block = 2;
  bytes content = 3;
  string mark = 4;
}

message IsExistFileRequest {
  string filename = 1;
  string mark = 2;
}

message IsExistFileResponse {
  bool status = 1;
  string mark = 2;
}

message DeleteFileRequest {
  string filename = 1;
  string mark = 2;
}

message DeleteFileResponse {
  string mark = 1;
}

message GetFileSizeRequest {
  string filename = 1;
  string mark = 2;
}

message GetFileSizeResponse {
  int64 size = 1;
  string mark = 2;
}

message MoveFileRequest {
  string source_filename = 1;
  string destination_filename = 2;
  bool overwrite = 3;
  string mark = 4;
}

message MoveFileResponse {
  string mark = 1;
}

message CopyFileRequest {
  string source_filename = 1;
  string destination_filename = 2;
  bool overwrite = 3;
  string mark = 4;
}

message CopyFileResponse {
  string mark = 1;
}
